# pixi-pack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CITATION.cff  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  activate-openssl.sh  build.rs  pixi.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  release.yml
.github/assets/: pixi-pack-demo.cast
.github/assets/demo/: demo-dark.tape  demo-light.tape  demo.tape  demo.webm
.github/workflows/: build.yml  chore.yml  ci.yml  codeql.yml  scorecard.yml
examples/auth/: pixi.toml
examples/local-build/: CMakeLists.txt  hello.c  pixi.toml
examples/local-build/local-pkg/: CMakeLists.txt  hello.c  pixi.toml
examples/local-build/local-pkg2/: CMakeLists.txt  hello.c  pixi.toml
examples/local-build/main-pkg/: pixi.toml
examples/local-build/main-pkg/local-pkg/: pixi.toml
examples/local-build/main-pkg/local-pkg2/: CMakeLists.txt
examples/local-channel/: pixi.lock.template  pixi.toml.template
examples/local-channel/channel/noarch/: repodata.json
examples/local-package/: my-webserver.conda  pixi.toml
examples/mirror-middleware/: README.md  config.toml  pixi.toml
examples/no-timestamp/: pixi.toml
examples/pypi-bdist-packages/: pixi.toml
examples/pypi-non-wheel-packages/: README.md  pixi.toml
examples/pypi-packages/: README.md  pixi.toml
examples/pypi-wheel-171/: pixi.toml
examples/pypi-wheel-packages/: pixi.toml
examples/repodata-patches/: README.md  pixi.toml
examples/simple-python/: README.md  pixi.toml
examples/webserver/: .gitignore  README.md  my-webserver-0.1.0-pyh4616a5c_0.conda  my-webserver-0.1.0-pyh4616a5c_0.tar.bz2  my-webserver-broken-0.1.0-pyh4616a5c_0.conda  my_webserver-0.1.0-py3-none-any.whl  pixi.toml  pyproject.toml
examples/webserver/my_webserver/: __init__.py
examples/webserver/recipe/: recipe-broken.yaml  recipe.yaml
extractor/: Cargo.toml
extractor/src/: main.rs
src/: build_context.rs  header.ps1  header.sh  lib.rs  main.rs  pack.rs  unpack.rs  util.rs
tests/: integration_test.rs
tests/snapshots/: integration_test__built-on-win__sha256-linux-64-executable.snap  integration_test__built-on-win__sha256-linux-aarch64-executable.snap  integration_test__built-on-win__sha256-osx-64-executable.snap  integration_test__built-on-win__sha256-osx-arm64-executable.snap  integration_test__sha256-linux-64-executable.snap  integration_test__sha256-linux-64-pypi-executable.snap  integration_test__sha256-linux-64-pypi.snap  integration_test__sha256-linux-64.snap  integration_test__sha256-linux-aarch64-executable.snap  integration_test__sha256-linux-aarch64-pypi-executable.snap  integration_test__sha256-linux-aarch64-pypi.snap  integration_test__sha256-linux-aarch64.snap  integration_test__sha256-linux-ppc64le-pypi.snap  integration_test__sha256-linux-ppc64le.snap  integration_test__sha256-osx-64-executable.snap  integration_test__sha256-osx-64-pypi-executable.snap  integration_test__sha256-osx-64-pypi.snap  integration_test__sha256-osx-64.snap  integration_test__sha256-osx-arm64-executable.snap  integration_test__sha256-osx-arm64-pypi-executable.snap  integration_test__sha256-osx-arm64-pypi.snap  integration_test__sha256-osx-arm64.snap  integration_test__sha256-win-64-executable.snap  integration_test__sha256-win-64-pypi-executable.snap  integration_test__sha256-win-64-pypi.snap  integration_test__sha256-win-64.snap
