[package]
name = "pixi-pack"
description = "A command line tool to pack and unpack conda environments for easy sharing"
version = "0.7.6"
edition = "2024"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[features]
default = ["native-tls"]
native-tls = [
  "reqwest/native-tls",
  "reqwest/native-tls-alpn",
  "rattler/native-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler/rustls-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "string"] }
clap_complete = "4.6.0"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
futures = "0.3.32"
indicatif = "0.18.4"
rattler = { version = "0.40.3", default-features = false }
rattler_config = "0.3.6"
rattler_digest = { version = "1.2.3", features = ["tokio"] }
rattler_conda_types = "0.44.3"
rattler_index = "0.27.20"
rattler_lock = "0.27.4"
rattler_networking = { version = "0.26.6", default-features = false, features = [
  "s3",
  "rattler_config",
] }
rattler_package_streaming = { version = "0.24.6", default-features = false }
rattler_shell = "0.26.6"
reqwest = { version = "0.12.28", default-features = false, features = [
  "http2",
  "macos-system-configuration",
] }
reqwest-middleware = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34" # todo: use a non-deprecated crate
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "default",
  "env-filter",
] }
url = "2.5.8"
tempfile = "3.27.0"
walkdir = "2.5.0"
tar = "0.4.45"
base64 = "0.22.1"
indexmap = "2.13.0"
ahash = "0.8.12"
uv-build-frontend = "0.0.6"
uv-cache = "0.0.11"
uv-client = "0.0.6"
uv-configuration = "0.0.6"
uv-dispatch = "0.0.6"
uv-distribution = "0.0.6"
uv-distribution-filename = "0.0.11"
uv-distribution-types = "0.0.11"
uv-git = "0.0.6"
uv-installer = "0.0.6"
uv-pep508 = "0.0.11"
uv-preview = "0.0.11"
uv-python = "0.0.6"
uv-types = "0.0.6"
uv-workspace = "0.0.6"

[dev-dependencies]
async-std = "1.13.2"
rstest = "0.26.1"
sha2 = "0.11.0"
insta = "1.46.3"
serial_test = "3.4.0"
