[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.*"
futures = "0.3.30"
rattler = { version = "0.27.6", default-features = false }
rattler_digest = "1.0.1"
rattler_conda_types = "0.27.2"
rattler_index = "0.19.24"
rattler_lock = "0.22.20"
rattler_networking = { version = "0.21.1", default-features = false }
rattler_package_streaming = { version = "0.22.3", default-features = false }
rattler_shell = "0.21.6"
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "macos-system-configuration",
] }
reqwest-middleware = "0.3.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
url = "2.5.2"
fxhash = "0.2.1"
tempfile = "3.12.0"

[dev-dependencies]
rstest = "0.22.0"
